# codex

.github/workflows/: lambda-build.yml
codex-rs/: Cargo.toml
codex-rs/codex-agent-lib/: Cargo.toml  README.md
codex-rs/codex-agent-lib/examples/: basic_agent.rs  custom_tools.rs  interactive_python_agent.rs  interactive_python_agent_v2.rs  simple_agent.rs  tui_agent.rs
codex-rs/codex-agent-lib/src/: agent.rs  config.rs  error.rs  lib.rs  message.rs  prelude.rs  processing.rs  session.rs  templates.rs  tool.rs  utils.rs
codex-rs/codex-agent-lib/src/tui/: app.rs  components.rs  event.rs  mod.rs
codex-rs/codex-agent-lib/tests/: integration_test.rs
codex-rs/linux-sandbox/src/: proxy_routing.rs
codex-rs/src/: test_print.py
codex-rs/utils/pty/src/: process_group.rs
codex-rs/utils/sleep-inhibitor/src/: linux_inhibitor.rs
specs/: 0001-idea.md  agent-lib-improvements-implementation.md  agent-lib-improvements.md
