[package]
authors = ["Tyr Chen"]
description = "A library for embedding Codex agent capabilities into other Rust applications"
edition = "2024"
license = "Apache-2.0"
name = "codex-agent-lib"
version = "0.0.0"

[features]
default = ["utils", "templates", "session"]
tui = ["dep:ratatui", "dep:crossterm"]
utils = ["dep:strip-ansi-escapes", "dep:regex"]
templates = []
session = []
full = ["tui", "utils", "templates", "session"]

[dependencies]
codex-common = { path = "../common", version = "0.0.0" }
codex-core = { path = "../core", version = "0.0.0" }
codex-login = { path = "../login", version = "0.0.0" }
codex-protocol = { path = "../protocol", version = "0.0.0" }
mcp-types = { path = "../mcp-types", version = "0.0.0" }

anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.42", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
typed-builder = "0.21"
uuid = { version = "1.11", features = ["v4"] }

# Optional dependencies
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }
strip-ansi-escapes = { version = "0.2", optional = true }
regex = { version = "1.11", optional = true }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ratatui = "0.29"
crossterm = "0.28"
strip-ansi-escapes = "0.2"

[lints]
workspace = true
